--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,2 +1,5 @@
 @nav-bar-background-color: #3296fa;
 @nav-bar-title-text-color: white;
+
+@search-background-color: rgb(50, 150, 250);
+@search-action-text-color: #fff;
